<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:background="@color/md_blue_500"
        android:layout_width="match_parent"
        android:paddingTop="10dp"
        android:layout_height="wrap_content"
        android:text="@string/tis"
        android:textSize="12sp"
        android:gravity="center"
        android:textColor="@color/md_blue_50"
        />
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="5dp"
        app:elevation="1dp">

        <LinearLayout
            android:id="@+id/base_swipe_item_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_model" />

                <TextView
                    android:id="@+id/phoneModel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/system_version" />

                <TextView
                    android:id="@+id/systemVersion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phoneMF" />

                <TextView
                    android:id="@+id/phoneMF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:orientation="horizontal">-->

                <!--<TextView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/phone_imei" />-->

                <!--<TextView-->
                    <!--android:id="@+id/phoneIMEI"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content" />-->
            <!--</LinearLayout>-->

            <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:orientation="horizontal">-->

                <!--<TextView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/phone_mac" />-->

                <!--<TextView-->
                    <!--android:id="@+id/phoneMac"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content" />-->
            <!--</LinearLayout>-->
        </LinearLayout>

    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="5dp"
        app:elevation="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aweme_version" />

                <TextView
                    android:id="@+id/awemeVersion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/town_version" />
                <TextView
                    android:id="@+id/townVersion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/is_module" />
                <TextView
                    android:id="@+id/isModule"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="5dp"
        app:elevation="1dp">

        <LinearLayout
            android:id="@+id/loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/loadingContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loading_loading"
                android:textColor="@color/loading_loading" />
        </LinearLayout>

    </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="5dp"
            app:elevation="1dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp">
                <Switch
                    android:id="@+id/switchBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/switch_text"
                    />
            </LinearLayout>

        </android.support.v7.widget.CardView>
    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="5dp"
            app:elevation="1dp">

            <TextView
                android:id="@+id/softwareGroup"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/software_group"
                tools:ignore="RtlCompat" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="5dp"
            app:elevation="1dp">

            <TextView
                android:id="@+id/faceBase"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/xposed_facebase"
                android:gravity="center"
                tools:ignore="RtlCompat"/>

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="5dp"
            app:elevation="1dp">
            <TextView
                android:id="@+id/github"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/github"
                android:gravity="center"
                tools:ignore="RtlCompat"/>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="5dp"
            app:elevation="1dp">
            <TextView
                android:id="@+id/blog"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/blog"
                android:gravity="center"
                tools:ignore="RtlCompat"/>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="5dp"
            app:elevation="1dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:id="@+id/aliPay"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="50dp"
                    android:text="@string/ali_pay"
                    android:gravity="center"
                    tools:ignore="RtlCompat"/>

                <TextView
                    android:id="@+id/weChatPay"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/wechat_pay"
                    tools:ignore="RtlCompat"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/law"
    android:gravity="center"
    android:textColor="@color/law"
    android:textSize="12sp"
    />
    </LinearLayout>
</ScrollView>